2018-08-20  NIIBE Yutaka  <gniibe@fsij.org>

	* mcu/usb-stm32f103.c (usb_lld_ctrl_send): Fix for ZLP.
	* mcu/usb-usbip.c (usb_lld_ctrl_send): Likewise.
	* mcu/usb-mkl27z.c (usb_lld_ctrl_send): Likewise.

2018-05-09  NIIBE Yutaka  <gniibe@fsij.org>

	* VERSION: 1.9.
	* doc/chopstx.texi (VERSION): 1.9.

2018-05-08  NIIBE Yutaka  <gniibe@fsij.org>

	* board/board-blue-pill.h (GPIO_USB_SET_TO_ENABLE): Remove.

	* doc/chopstx.texi (Compile-time macro): New chapter.

	* mcu/sys-stm32f103.c (usb_lld_sys_init): Use MHZ.
	(flash_protect): Fix for GD32F103.

2018-04-26  NIIBE Yutaka  <gniibe@fsij.org>

	* board/board-blue-pill-g.h: New.  Define STM32_ADCPRE and
	STM32_USBPRE for 96MHz clock.
	* mcu/stm32.h (STM32_USBPRE_DIV2): New for GD32F103.
	* mcu/clk_gpio_init-stm32.c: Allow constants, which are defined by
	board.h	(STM32_ADCPRE and STM32_USBPRE).
	* mcu/chx-stm32f103.c: Use STM32_ADCPRE and STM32_USBPRE.

	* mcu/usb-stm32f103.c (usb_lld_init): BTABLE setting at
	initialization.
	(usb_lld_reset): Not at each reset.

	* contrib/adc-stm32f103.c [MCU_STM32F1_GD32F1]: Use continuous
	sampling with no DELIBARATELY_DO_IT_WRONG_START_STOP.
	(adc_init): Wait after ADC_CR2_ADON.
	(adc_start): Likewise.  Enabling by ADC_CR2_ADON after all other
	registers configuration.

2018-01-19  NIIBE Yutaka  <gniibe@fsij.org>

	* VERSION: 1.8.
	* doc/chopstx.texi (VERSION): 1.8.

2018-01-18  NIIBE Yutaka  <gniibe@fsij.org>

	* mcu/stm32f103.h: Include stm32.h and cortex-m.h.

2018-01-09  Anthony Romano <romanoanthony061@gmail.com>

	* contrib/adc-stm32f103.c: Support IN8 config.

2017-12-19  NIIBE Yutaka  <gniibe@fsij.org>

	* VERSION: 1.7.
	* doc/chopstx.texi (VERSION): 1.7.

2017-12-18  NIIBE Yutaka  <gniibe@fsij.org>

	* contrib/usart-stm32f103.c: New.
	* example-usb-serial: New example.

2017-12-16  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx.c (chx_timer_expired): Bug fix of wake up.
	(chx_mutex_unlock): Avoid non-deterministic thing.

2017-12-14  NIIBE Yutaka  <gniibe@fsij.org>
